adapted StructurePlaceAnimator to new BlockList changes